--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,5 @@
 
 h2 {
-        font-size: 20px;
         position: relative;
 }
 
@@ -9,7 +8,10 @@ dt {
         font-weight: bold;
         font-size: 18px;
         text-align: right;
-        height: 100px;
+        height: 50px;
         border-right: 1px solid #999;
 }
 
+.grey {
+    background-color: #FAFAFA;
+}
