--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,15 +1,18 @@
 
 h2 {
-        position: relative;
+    position: relative;
+}
+
+a {
+    text-decoration: none;
 }
 
 dt {
-        font-style: italic;
-        font-weight: bold;
-        font-size: 18px;
-        text-align: right;
-        height: 50px;
-        border-right: 1px solid #999;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: right;
+    height: 50px;
 }
 
 .grey {
@@ -19,4 +22,8 @@ dt {
 .fa {
     padding-left: 3px;
     padding-right: 3px;
+}
+
+.borderize {
+    border-right: 1px solid #999;
 }
